# code-challenge-generator

./: README.md  pyproject.toml
src/: app.py
src/core/: generator.py  models.py  patterns.py
