[tool.poetry]
name = "code-challenge-generator"
version = "0.1.0"
description = ""
authors = ["Lucas Carvalho <lucasbuchele@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^1.1.3"
langchain-openai = "^1.1.1"
streamlit = "^1.52.1"
pydantic = "^2.12.5"
python-dotenv = "^1.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
